[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-bot"
version = "0.1.0"
description = "Reddit automation and scanning tools"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
reddit-bot = "apps.cli.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]


[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
